added Authorities to the project, added annotation, added authoritiesProvider, added filter, major update another class